<?xml version="1.0"?>
<package format="3">
  <name>ros2_rt_dualarm_sim</name>
  <version>2.0.0</version>
  <description>A ROS2 package for ros2_rt_dualarm_sim</description>

  <maintainer email="tjdalsckd@gmai.com">Minchang Sung</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>  
  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>  
  <depend>nav_msgs</depend>  
  <depend>pluginlib</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- TODO: Add more dependencies if required -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

